# Granny-Launcher

./: gradle.properties  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/KittyMemory/: KittyMemory.cpp  MemoryBackup.cpp  MemoryPatch.cpp
app/src/main/cpp/LocalPlayer/: LocalPlayer.cpp  LocalPlayer.h
app/src/main/cpp/dobby/include/: dobby.h
app/src/main/cpp/include/: Logger.h  Utils.h  Wrench.cpp  Wrench.h  vector.h
app/src/main/res/anim/: bm_bottom_sheet_slide_in.xml  bm_bottom_sheet_slide_out.xml
app/src/main/res/color/: thumb_tint.xml
app/src/main/res/drawable/: applovin_ic_mute_to_unmute.xml  bm_bg_privacy_button.xml  bm_bg_privacy_divider.xml  bm_bg_privacy_sheet.xml  bm_bg_ripple_circle.xml  bm_ic_close.xml  drawable_category.xml  drawable_round_left.xml  drawable_round_right.xml  fuction_drawable.xml  gui_drawavle.xml  liftoff_icon_mute.xml  (+3 more)
drawable/: applovin_ic_unmute_to_mute.xml
gradle/wrapper/: gradle-wrapper.properties
layout/: layout.xml
values/: attrs.xml  colors.xml  dimens.xml  ids.xml  public.xml  strings.xml  styles.xml  themes.xml
values-de/: strings.xml
values-es/: strings.xml
values-fr/: strings.xml
values-fr-rCA/: strings.xml
values-ja/: strings.xml
values-ko/: strings.xml
values-ky/: strings.xml
values-ne/: strings.xml
values-nl/: strings.xml
values-ro/: strings.xml
values-te/: strings.xml
values-zh-rCN/: strings.xml
values-zh-rHK/: strings.xml
values-zh-rTW/: strings.xml
(+108 files in other folders)
